# link-shorterner

./: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  tmp_write.py
alembic/: env.py
alembic/versions/: 1c62b2d4aeb4_create_links_table.py
app/: config.py  database.py  main.py
app/models/: links.py
app/routers/: links.py  redirect.py
app/schemas/: links.py
app/services/: links_services.py
